# internal/transport/http/router.go
@@ -65,6 +65,18 @@ func NewRouter(
 	futures.GET("/balances", exchangeHandler.ContractBalances)
 	futures.GET("/account/balances", exchangeHandler.USDSMFuturesAccountBalances)
 	futures.GET("/account/positions", exchangeHandler.USDSMFuturesAccountPositions)
+	usdcMFutures := v1.Group("/exchanges/:provider/futures/usdcm")
+	usdcMFutures.GET("/ping", exchangeHandler.USDCMFuturesPing)
+	usdcMFutures.GET("/time", exchangeHandler.USDCMFuturesServerTime)
+	usdcMFutures.GET("/exchange-info", exchangeHandler.USDCMFuturesExchangeInfo)
+	usdcMFutures.GET("/depth", exchangeHandler.USDCMFuturesDepth)
+	usdcMFutures.GET("/klines", exchangeHandler.USDCMFuturesKlines)
+	usdcMFutures.GET("/ticker/24hr", exchangeHandler.USDCMFuturesTicker24hr)
+	usdcMFutures.GET("/ticker/price", exchangeHandler.USDCMFuturesTickerPrice)
+	usdcMFutures.GET("/ticker/book", exchangeHandler.USDCMFuturesBookTicker)
+	usdcMFutures.GET("/premium-index", exchangeHandler.USDCMFuturesPremiumIndex)
+	usdcMFutures.GET("/account/balances", exchangeHandler.USDCMFuturesAccountBalances)
+	usdcMFutures.GET("/account/positions", exchangeHandler.USDCMFuturesAccountPositions)
 	coinMFutures := v1.Group("/exchanges/:provider/futures/coinm")
 	coinMFutures.GET("/ping", exchangeHandler.CoinMFuturesPing)
 	coinMFutures.GET("/time", exchangeHandler.CoinMFuturesServerTime)
